Changed text size button image

--- a/app/src/main/res/layout/activity_read_story.xml
+++ b/app/src/main/res/layout/activity_read_story.xml
@@ -8,13 +8,17 @@
         android:id="@+id/reader_header"
         layout="@layout/green_header_frame_layout" />
 
-    <Button
-        android:id="@+id/button_text_size"
+    <ImageButton
+        android:id="@+id/button_text_size_big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/ic_text_size"
+        android:contentDescription="Bigger Text"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="Aa" />
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:text="big" />
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
