Sort completed stories for creator and all - if list is empty, there's a message instead of empty list

--- a/app/src/main/res/layout/fragment_stories_list.xml
+++ b/app/src/main/res/layout/fragment_stories_list.xml
@@ -46,7 +46,8 @@
                 android:text="@string/item_storylist_new"
                 android:textColor="@color/newStory"
                 android:layout_alignParentEnd="true"
-                android:textStyle="italic"/>
+                android:textStyle="italic"
+                android:visibility="invisible"/>
 
 
         </RelativeLayout>
