--- a/app/src/main/res/layout/fragment_all_stories.xml
+++ b/app/src/main/res/layout/fragment_all_stories.xml
@@ -23,14 +23,23 @@
             android:id="@+id/all_stories_swipeContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ListView
-                android:id="@+id/listview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@color/softGrey"
-                android:dividerHeight="1dp" />
-
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ListView
+                    android:id="@+id/listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@color/softGrey"
+                    android:dividerHeight="1dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/emptylist"
+                    android:text="EMPTY LIST YIO"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
         </android.support.v4.widget.SwipeRefreshLayout>
 
     </LinearLayout>
