--- a/app/src/main/res/layout/fragment_stories_list.xml
+++ b/app/src/main/res/layout/fragment_stories_list.xml
@@ -11,7 +11,7 @@
     <ToggleButton
         android:id="@+id/toggleButton"
         style="@style/AppTheme.ToggleStars"
-        android:background="@drawable/mytogglebutton"
+        android:background="@drawable/favorites_star_toggle_btn"
         android:focusable="false"
         android:textOff=""
         android:textOn=""
