--- a/app/src/main/res/layout/activity_read_story.xml
+++ b/app/src/main/res/layout/activity_read_story.xml
@@ -11,10 +11,9 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/activity_read_margin_horizontal"
-        android:layout_marginRight="@dimen/activity_read_margin_horizontal"
+        android:paddingRight="@dimen/activity_read_padding_horizontal"
+        android:paddingLeft="@dimen/activity_read_padding_horizontal"
         android:layout_marginTop="@dimen/activity_read_margin_top"
-        android:layout_below="@id/reader_header"
         android:orientation="vertical">
 
 
@@ -56,12 +55,17 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/activity_read_scrollview_magin_top">
+            android:paddingTop="@dimen/activity_read_padding_vertical"
+            android:paddingBottom="@dimen/activity_read_padding_vertical"
+            android:layout_marginTop="@dimen/activity_read_scrollview_margin_top">
+
             <TextView
                 android:id="@+id/story_reader_story_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/activity_read_storie_size" />
+                android:textColor="@color/black"
+                android:lineSpacingExtra="7dp"
+                android:textSize="@dimen/activity_read_story_content_text_size" />
         </ScrollView>
     </LinearLayout>
 </LinearLayout>
