--- a/app/src/main/res/layout/activity_story_chooser.xml
+++ b/app/src/main/res/layout/activity_story_chooser.xml
@@ -53,6 +53,13 @@
 
                 </ListView>
             </android.support.v4.widget.SwipeRefreshLayout>
+            <TextView
+                android:id="@+id/emptyMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"/>
 
             <ImageButton
                 android:id="@+id/story_chooser_add_btn"
