--- a/app/src/main/res/layout/activity_read_story.xml
+++ b/app/src/main/res/layout/activity_read_story.xml
@@ -66,6 +66,7 @@
                 android:paddingBottom="@dimen/activity_read_padding_vertical"
                 android:paddingRight="@dimen/activity_read_padding_horizontal"
                 android:paddingLeft="@dimen/activity_read_padding_horizontal"
+                android:paddingTop="12dp"
                 android:textSize="@dimen/activity_read_story_content_text_size" />
         </ScrollView>
     </LinearLayout>
