--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
 
         <TextView
@@ -49,6 +51,13 @@
             style="@style/AppTheme.Button"
             android:text="@string/settings_consume_tokens"
             android:id="@+id/settings_consume_token_btn" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/AppTheme.Button"
+            android:text="@string/settings_unlock_all_stories_tokens"
+            android:id="@+id/settings_unlock_all_stories_btn" />
 
         <Button
             android:layout_width="match_parent"
