--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2"
-    android:paddingLeft="40dp"
-    android:paddingRight="40dp"
-    android:paddingTop="30dp"
-    android:paddingBottom="30dp">
+    style="@style/AppTheme.Dialog.Box">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,9 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings_title"
-
-            style="@style/AppTheme.Dialog.Title"
-            android:background="#f2f2f2"/>
+            style="@style/AppTheme.Dialog.Title" />
 
         <View
             android:layout_width="match_parent"
