--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -117,6 +117,14 @@
       ~~ Dialog
       -->
     <style name="AppTheme.Dialog" parent="AppTheme.Activity"/>
+    <style name="AppTheme.Dialog.Box">
+        <item name="android:orientation">vertical</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="android:paddingTop">30dp</item>
+        <item name="android:paddingBottom">30dp</item>
+        <item name="android:paddingLeft">40dp</item>
+        <item name="android:paddingRight">40dp</item>
+    </style>
     <style name="AppTheme.Dialog.Title">
         <item name="android:fontFamily">sans-serif</item> <!--  roboto light  -->
         <item name="android:textColor">@color/primary</item>
