--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -69,12 +69,25 @@
     </LinearLayout>
 
     <!--  I agree conditions...  -->
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.15"
         android:background="@color/softGrey"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp">
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/signIn_storyteller_checkbox"
+            android:textColor="@color/dark"/>
 
     </LinearLayout>
 </LinearLayout>
