--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,8 @@
     <color name="dark">#303030</color>
     <color name="black">#181818</color>
 
-    <color name="newStory">#deb92c</color> <!-- Mihai : ? -->
-
     <!--  Theme  -->
     <color name="primary">#1aa19b</color>
+    <color name="primaryLight">#e6f5f5</color>
     <color name="primaryDark">#13716e</color>
 </resources>
