--- a/app/src/main/res/layout/dialog_story_info.xml
+++ b/app/src/main/res/layout/dialog_story_info.xml
@@ -22,35 +22,64 @@
             android:layout_width="match_parent"
             style="@style/AppTheme.Dialog.Content.Separator" />
 
-        <TextView
-            android:id="@+id/dialog_story_info_title"
+        <!-- Title -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="Title :" />
+            android:layout_marginTop="18dp"
+            style="@style/AppTheme.Dialog.StoryInfoContainer">
 
-        <TextView
-            android:id="@+id/dialog_story_info_character_name"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Dialog.StoryInfoLabel"
+                android:text="@string/dialog_story_info_label_title" />
+
+            <TextView
+                android:id="@+id/dialog_story_info_title"
+                style="@style/AppTheme.Dialog.StoryInfoText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!-- Character Name -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="Main Character: " />
+            style="@style/AppTheme.Dialog.StoryInfoContainer">
 
-        <TextView
-            android:id="@+id/dialog_story_info_theme"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_story_info_label_character"
+                style="@style/AppTheme.Dialog.StoryInfoLabel"
+                />
+
+            <TextView
+                android:id="@+id/dialog_story_info_character_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Dialog.StoryInfoText"/>
+        </LinearLayout>
+
+        <!-- Theme -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="Theme :" />
+            style="@style/AppTheme.Dialog.StoryInfoContainer">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Dialog.StoryInfoLabel"
+                android:text="@string/dialog_story_info_label_theme"/>
 
+            <TextView
+                android:id="@+id/dialog_story_info_theme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Dialog.StoryInfoText"/>
+        </LinearLayout>
     </LinearLayout>
-
-
 </RelativeLayout >
