--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,6 +112,13 @@
         <item name="android:paddingLeft">@dimen/list_item_horizontal_padding</item>
         <item name="android:background">@color/white</item>
     </style>
+    <style name="AppTheme.ToggleStars">
+        <item name="android:layout_width">35dp</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="android:textOff"></item>
+        <item name="android:textOn"></item>
+    </style>
 
     <!--
       ~~ Dialog
@@ -148,12 +155,21 @@
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:fontFamily">sans-serif-thin</item><!--  roboto thin  -->
     </style>
-    <style name="AppTheme.ToggleStars">
-        <item name="android:layout_width">35dp</item>
-        <item name="android:layout_height">35dp</item>
-        <item name="android:layout_margin">15dp</item>
-        <item name="android:textOff"></item>
-        <item name="android:textOn"></item>
+    <style name="AppTheme.Dialog.StoryInfoContainer">
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginBottom">15dp</item>
+    </style>
+    <style name="AppTheme.Dialog.StoryInfoLabel">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/primaryDark</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+    <style name="AppTheme.Dialog.StoryInfoText">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/darkerGrey</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <!--
